--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,9 @@
         <title>ChrisovoWeb</title>
     </head>
     <body>
+        <div class="cointainer">
+            
+        </div>
         <h1>Toto je web... No shit sherlock</h1>
     </body>
 </html>
