--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="cointainer">
+        <div class="container">
           <h1>Toto je web... No shit sherlock</h1>
         </div>
     </body>
