--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>ChrisovoWeb</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="background-color:rgb(234, 0, 255)">
         <div class="container">
         </div>
         <h1>Toto je web... No shit sherlock</h1>
