--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-color:rgb(234, 0, 255)">
-        <div class="container">
+        <div class="text" color>
+            <h1>Toto je web... No shit sherlock</h1>
         </div>
-        <h1>Toto je web... No shit sherlock</h1>
     </body>
 </html>
