--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-color:rgb(234, 0, 255)">
-        <div class="text" color background-color>
+        <div class="text" color background-color position>
             <h1>Toto je web... No shit sherlock</h1>
         </div>
     </body>
