--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-color:rgb(234, 0, 255)">
+
+
+        <script>
+            document.getElementById("dick").innerHTML = "sex";
+        </script>
+        <button type="button" onclick="tlacitko()">Click Me!</button>
         <div class="text" color background-color position>
-            <h1>Toto je web... No shit sherlock</h1>
+            <h1 id="dick">Toto je web... No shit sherlock</h1>
         </div>
     </body>
 </html>
