--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 
         <script>
+            function tlacitko()
+            {
             document.getElementById("dick").innerHTML = "sex";
+            }
         </script>
         <button type="button" onclick="tlacitko()">Click Me!</button>
         <div class="text" color background-color position>
