--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vs">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>ChrisovoWeb</title>
@@ -16,7 +16,7 @@
         </script>
         <button type="button" onclick="tlacitko()">Click Me!</button>
         <div class="text" color background-color position>
-            <h1 id="dick">Toto je web... No shit sherlock</h1>
+            <h1 id="dick"> Toto je web... No shit sherlock</h1>
         </div>
     </body>
 </html>
