--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <div class="text" color background-color position>
         <h1 id="moneyCounter"></h1>
     </div>
+    <div class="buttonText">
+        <h1>Click me.</h1>
+    </div>
 
 
     <script>
@@ -122,7 +125,20 @@
         function clearData() {
             let clearDataText = "Press OK button to delete all your progress!\nPress Cancel to cancel progress dump.";
             if (confirm(clearDataText) == true) {
-                window.localStorage.clear();
+                localStorage.setItem("gayi1", 0);
+                localStorage.setItem("gayc1", 10);
+                localStorage.setItem("gayi2", 0);
+                localStorage.setItem("gayc2", 100);
+                localStorage.setItem("gayi3", 0);
+                localStorage.setItem("gayc3", 500);
+                localStorage.setItem("moneyxd", 0);
+                Money = 0;
+                gayupgradeint = 0;
+                gayupgradecost = 10;
+                gayupgradeint2 = 0;
+                gayupgradecost2 = 100;
+                gayupgradeint3 = 0;
+                gayupgradecost3 = 500;
                 document.location.reload(true);
             } else {
                 return;
