--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="background-color:#022b3b">
-
+    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
     <a href="#" class="buttonStyle" onclick="tlacitko()">Click me</a>
     <a href="#" id="upgrade1" class="upgradeStyle" onclick="gayUpgrade()"></a>
     <a href="#" id="upgrade2" class="upgradeStyle2" onclick="gayUpgrade2()"></a>
