comic sans iphone

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         setInterval(gayupgradecps, 1000)
         setInterval(renderMoney, 0)
         setInterval(saveData, 500)
+        setInterval(renderBackground, 50)
 
         function saveData() {
             localStorage.setItem("moneyxd", Money)
