--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="buttonText">
         <h1>Click me.</h1>
     </div>
+    <div class="upgradeBox">
+        Efficient honorificabilitudinitatibus cross-media information without floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time schemas plenipotentiary.
+    </div>
 
 
     <script src="javascript.js"></script>
