--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body style="background-color:#022b3b">
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
     <a href="#" class="buttonStyle" onclick="tlacitko()">Click me</a>
-    <a href="#" id="upgrade1" class="upgradeStyle" onclick="gayUpgrade()"></a>
-    <a href="#" id="upgrade2" class="upgradeStyle2" onclick="gayUpgrade2()"></a>
-    <a href="#" id="upgrade3" class="upgradeStyle3" onclick="gayUpgrade3()"></a>
-    <a href="#" id="upgrade3" class="errorMessage" onclick="clearData();">clear data</a>
+    <a href="#" class="errorMessage" onclick="clearData();">clear data</a>
     <div class="text" color background-color position>
         <h1 id="moneyCounter"></h1>
     </div>
@@ -21,7 +18,10 @@
         <h1>Click me.</h1>
     </div>
     <div class="upgradeBox">
-        Efficient honorificabilitudinitatibus cross-media information without floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time schemas plenipotentiary.
+
+        <a href="#" id="upgrade1" class="upgradeStyle" onclick="gayUpgrade()"></a>
+        <a href="#" id="upgrade2" class="upgradeStyle2" onclick="gayUpgrade2()"></a>
+        <a href="#" id="upgrade3" class="upgradeStyle3" onclick="gayUpgrade3()"></a>
     </div>
 
 
