New upgrade and easy new upgrades

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
     </div>
     <div class="upgradeBox">
 
-        <a href="#" id="upgrade1" class="upgradeStyle" onclick="gayUpgrade()"></a>
-        <a href="#" id="upgrade2" class="upgradeStyle2" onclick="gayUpgrade2()"></a>
-        <a href="#" id="upgrade3" class="upgradeStyle3" onclick="gayUpgrade3()"></a>
+        <a href="#" id="upgrade1" class="upgradeStyle" onclick="Upgrade()"></a>
+        <a href="#" id="upgrade2" class="upgradeStyle2" onclick="Upgrade2()"></a>
+        <a href="#" id="upgrade3" class="upgradeStyle3" onclick="Upgrade3()"></a>
+        <a href="#" id="upgrade4" class="upgradeStyle4" onclick="Upgrade4()"></a>
+        <a href="#" id="upgrade5" class="upgradeStyle5" onclick="Upgrade5()"></a>
+        <a href="#" id="upgrade6" class="upgradeStyle6" onclick="Upgrade6()"></a>
+        <a href="#" id="upgrade7" class="upgradeStyle7" onclick="Upgrade7()"></a>
     </div>
 
 
