--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="text" color background-color position>
         <h1 id="moneyCounter"></h1>
     </div>
+    <div class="CPSDisplay" color position>
+        <h1 id="CPSTextDisplay">caaccas</h1>
+    </div>
     <div class="buttonText">
         <h1>Click me.</h1>
     </div>
