A lot of changes...
Animations... PrestigePower and more

--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
         <h1 id="moneyCounter"></h1>
     </div>
     <div class="CPSDisplay" color position>
-        <h1 id="CPSTextDisplay">caaccas</h1>
+        <h1 id="CPSTextDisplay">sabloSUS404</h1>
+    </div>
+    <div class="AllTimeMoney" color position>
+        <h1 id="AllTimeMoneyID">sabloSUS404</h1>
+    </div>
+    <div class="ATMBar" position>
+        <div id="ATMBarID" class="ATMBarProgress">80%</div>
     </div>
     <div class="buttonText">
-        <h1>Click me.</h1>
+        <h1 id="PrestigeDisplay">Prestige</h1>
+    </div>
+    <div class="prestigePower">
+        <h1 id="PPDisplay">Prestige</h1>
     </div>
     <div class="upgradeBox">
 
