Added new infobar and bugfix

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="AllTimeMoney" color position>
         <h1 id="AllTimeMoneyID">sabloSUS404</h1>
     </div>
+    <div class="RawCPS" color position>
+        <h1 id="RawCPSID">sabloSUS404</h1>
+    </div>
     <div class="ATMBar" position>
         <div id="ATMBarID" class="ATMBarProgress">80%</div>
     </div>
