--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color:#022b3b">
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
-    <a href="#" class="buttonStyle" onclick="tlacitko()">Click me</a>
+    <a href="#" id="Clickr" class="buttonStyle" onclick="tlacitko()">Click me</a>
     <a href="#" class="errorMessage" onclick="clearData();">clear data</a>
     <div class="text" color background-color position>
         <h1 id="moneyCounter"></h1>
@@ -22,6 +22,12 @@
     </div>
     <div class="RawCPS" color position>
         <h1 id="RawCPSID">sabloSUS404</h1>
+    </div>
+    <div>
+        <img class="SDef" id="SImage" src="sablos/sabloclick.png" alt="Sábloclick-default" unselectable="on">
+    </div>
+    <div>
+        <img class="Basement" src="Background/Basement.jpg" alt="Background-Basement" unselectable="on">
     </div>
     <div class="ATMBar" position>
         <div id="ATMBarID" class="ATMBarProgress">80%</div>
