--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 id="RawCPSID">sabloSUS404</h1>
     </div>
     <div>
-        <img class="SDef" id="SImage" src="sablos/sabloclick.png" alt="Sábloclick-default" unselectable="on">
+        <img class="SDef" id="SImage" src="Sablos/sabloclick.png" alt="Sábloclick-default" unselectable="on">
     </div>
     <div>
         <img class="Basement" src="Background/Basement.jpg" alt="Background-Basement" unselectable="on">
