Functional combo counter

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="background-color:#022b3b">
+<body style="background-color: black">
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
     <a href="#" id="Clickr" class="buttonStyle" onclick="tlacitko()">Click me</a>
     <a href="#" class="errorMessage" onclick="clearData();">clear data</a>
     <div class="text" color background-color position>
         <h1 id="moneyCounter"></h1>
+    </div>
+    <div>
+        <h1 id="combo">Combo</h1>
     </div>
     <div class="CPSDisplay" color position>
         <h1 id="CPSTextDisplay">sabloSUS404</h1>
