--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
+<!--
+WORKING DO NOT TOUCH!!!
+Frix63
+-->
+
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -11,7 +17,7 @@
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
     <a href="#" id="Clickr" class="buttonStyle" onclick="tlacitko()">Click me</a>
     <a href="#" class="errorMessage" onclick="clearData();">clear data</a>
-    <div class="text" color background-color position>
+    <div class="moneyText" color background-color position>
         <h1 id="moneyCounter"></h1>
     </div>
     <div>
