Better looking hmtl script

--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@ Frix63
 
 <body style="background-color: black">
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
+
+    <!-- Clickable button on the whole page -->
     <a href="#" id="Clickr" class="buttonStyle" onclick="tlacitko()">Click me</a>
+
+    <!-- Sáblos -->
     <a href="#" class="errorMessage" onclick="clearData();">clear data</a>
+
+    <!-- Money display in top left corner -->
     <div class="moneyText" color background-color position>
         <h1 id="moneyCounter"></h1>
     </div>
+
+    <!-- Combo -->
     <div>
         <h1 id="combo">Combo</h1>
     </div>
+
+    <!-- Stats -->
     <div class="CPSDisplay" color position>
         <h1 id="CPSTextDisplay">sabloSUS404</h1>
     </div>
@@ -32,12 +42,18 @@ Frix63
     <div class="RawCPS" color position>
         <h1 id="RawCPSID">sabloSUS404</h1>
     </div>
+
+    <!-- Sáblos -->
     <div>
         <img class="SDef" id="SImage" src="Sablos/sabloclick.png" alt="Sábloclick-default" unselectable="on">
     </div>
+
+    <!-- Backgrounds -->
     <div>
         <img class="Basement" src="Background/Basement.jpg" alt="Background-Basement" unselectable="on">
     </div>
+
+    <!-- Prestige -->
     <div class="ATMBar" position>
         <div id="ATMBarID" class="ATMBarProgress">80%</div>
         <div class="prestigePower">
@@ -47,6 +63,8 @@ Frix63
     <div class="buttonText">
         <h1 id="PrestigeDisplay">Prestige</h1>
     </div>
+
+    <!-- Upgrades -->
     <div class="upgradeBox">
 
         <a href="#" id="upgrade1" class="upgradeStyle" onclick="Upgrade()"></a>
