Added new 3 Prestige levels

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Frix63
 
     <!-- Backgrounds -->
     <div>
-        <img class="Basement" src="Background/Basement.jpg" alt="Background-Basement" unselectable="on">
+        <img class="Basement" id="BackgroundIMG" src="Background/Basement.jpg" alt="Background-Basement" unselectable="on">
     </div>
 
     <!-- Prestige -->
