New font... better money display and more

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Frix63
     <a href="#" class="errorMessage" onclick="clearData();">clear data</a>
 
     <!-- Money display in top left corner -->
-    <div class="moneyText" color background-color position>
+    <div class="moneyText">
         <h1 id="moneyCounter"></h1>
     </div>
 
