Upgrades with visuals

--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@ Frix63
 
     <!-- Upgrades -->
     <div class="upgradeBox">
-
+        <img class="upgradeStyleB" src="UpgradeBgs/PrestigeStudents.jpg">
+        <img class="upgradeStyleB2" src="UpgradeBgs/Subsidies.jpg">
+        <img class="upgradeStyleB3" src="UpgradeBgs/ChemTeacher.jpg">
+        <img class="upgradeStyleB4" src="UpgradeBgs/12min.jpg">
+        <img class="upgradeStyleB5" src="UpgradeBgs/boat.jpg">
+        <img class="upgradeStyleB6" src="UpgradeBgs/Reality.jpg">
+        <img class="upgradeStyleB7" src="UpgradeBgs/Moodle.jpg">
         <a href="#" id="upgrade1" class="upgradeStyle" onclick="Upgrade()"></a>
         <a href="#" id="upgrade2" class="upgradeStyle2" onclick="Upgrade2()"></a>
         <a href="#" id="upgrade3" class="upgradeStyle3" onclick="Upgrade3()"></a>
