--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ Frix63
 
     <!-- Sáblos -->
     <div>
+        <img class="Rays2" src="Background/Rays.png" alt="rays2">
+        <img class="Rays" src="Background/Rays.png" alt="rays">
         <img class="SDef" id="SImage" src="Sablos/sabloclick.png" alt="Sábloclick-default" unselectable="on">
     </div>
 
