--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Frix63
 
 <head>
     <meta charset="utf-8">
-    <title>ChrisovoWeb</title>
+    <title>SábloClicker by Chris</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
