--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@ Frix63
     </div>
 
     <!-- Stats -->
-    <div class="CPSDisplay" color position>
-        <h1 id="CPSTextDisplay">sabloSUS404</h1>
-    </div>
-    <div class="AllTimeMoney" color position>
-        <h1 id="AllTimeMoneyID">sabloSUS404</h1>
-    </div>
-    <div class="RawCPS" color position>
-        <h1 id="RawCPSID">sabloSUS404</h1>
+    <div class="InfoBox">
+        <div class="CPSDisplay" color position>
+            <h1 id="CPSTextDisplay">sabloSUS404</h1>
+        </div>
+        <div class="AllTimeMoney" color position>
+            <h1 id="AllTimeMoneyID">sabloSUS404</h1>
+        </div>
+        <div class="RawCPS" color position>
+            <h1 id="RawCPSID">sabloSUS404</h1>
+        </div>
     </div>
 
     <!-- Sáblos -->
