--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ Frix63
         <div class="RawCPS" color position>
             <h1 id="RawCPSID">sabloSUS404</h1>
         </div>
+        <div class="MPSC" color position>
+            <h1 id="MPS">sabloSUS404</h1>
+        </div>
     </div>
 
     <!-- Sáblos -->
