--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Frix63
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
 
     <!-- Clickable button on the whole page -->
-    <a href="#" id="Clickr" class="buttonStyle" onclick="tlacitko()">Click me</a>
+    <a href="#" onmouseleave="anticheatleave()" onmousemove="anticheatmove()" id="Clickr" class="buttonStyle" onclick="tlacitko()">Click me</a>
 
     <!-- Sáblos -->
     <a href="#" class="errorMessage" onclick="clearData();">clear data</a>
