After two weeks of constant procrastination i added prestige level text

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ Frix63
         <div class="MPSC" color position>
             <h1 id="MPS">sabloSUS404</h1>
         </div>
+        <div class="PStyle" color position>
+            <h1 id="PrestigeScoreDisplay">sabloSUS404</h1>
+        </div>
     </div>
 
     <!-- Sáblos -->
@@ -61,6 +64,9 @@ Frix63
     </div>
 
     <!-- Prestige -->
+    <div class="PrestigeL">
+        <h1>Prestige level</h1>
+    </div>
     <div class="ATMBar" position>
         <div id="ATMBarID" class="ATMBarProgress">80%</div>
         <div class="prestigePower">
