--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@ Frix63
     <!-- Upgrades -->
     <div class="upgradeBox">
         <img class="upgradeStyleB" src="UpgradeBgs/PrestigeStudents.jpg">
-        <img class="upgradeStyleB2" src="UpgradeBgs/Subsidies.jpg">
-        <img class="upgradeStyleB3" src="UpgradeBgs/ChemTeacher.jpg">
-        <img class="upgradeStyleB4" src="UpgradeBgs/12min.jpg">
-        <img class="upgradeStyleB5" src="UpgradeBgs/boat.jpg">
-        <img class="upgradeStyleB6" src="UpgradeBgs/Reality.jpg">
-        <img class="upgradeStyleB7" src="UpgradeBgs/Moodle.jpg">
+        <img id="UB2" class="upgradeStyleB2" src="UpgradeBgs/Subsidies.jpg">
+        <img id="UB3" class="upgradeStyleB3" src="UpgradeBgs/ChemTeacher.jpg">
+        <img id="UB4" class="upgradeStyleB4" src="UpgradeBgs/12min.jpg">
+        <img id="UB5" class="upgradeStyleB5" src="UpgradeBgs/boat.jpg">
+        <img id="UB6" class="upgradeStyleB6" src="UpgradeBgs/Reality.jpg">
+        <img id="UB7" class="upgradeStyleB7" src="UpgradeBgs/Moodle.jpg">
         <a href="#" id="upgrade1" class="upgradeStyle" onclick="Upgrade()"></a>
         <a href="#" id="upgrade2" class="upgradeStyle2" onclick="Upgrade2()"></a>
         <a href="#" id="upgrade3" class="upgradeStyle3" onclick="Upgrade3()"></a>
